; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_hw_v1.c_hns_roce_v1_query_qp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_hw_v1.c_hns_roce_v1_query_qp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_qp = type { i32 }
%struct.ib_qp_attr = type { i32 }
%struct.ib_qp_init_attr = type { i32 }
%struct.hns_roce_qp = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ib_qp*, %struct.ib_qp_attr*, i32, %struct.ib_qp_init_attr*)* @hns_roce_v1_query_qp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hns_roce_v1_query_qp(%struct.ib_qp* %0, %struct.ib_qp_attr* %1, i32 %2, %struct.ib_qp_init_attr* %3) #0 {
  %5 = alloca %struct.ib_qp*, align 8
  %6 = alloca %struct.ib_qp_attr*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.ib_qp_init_attr*, align 8
  %9 = alloca %struct.hns_roce_qp*, align 8
  store %struct.ib_qp* %0, %struct.ib_qp** %5, align 8
  store %struct.ib_qp_attr* %1, %struct.ib_qp_attr** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.ib_qp_init_attr* %3, %struct.ib_qp_init_attr** %8, align 8
  %10 = load %struct.ib_qp*, %struct.ib_qp** %5, align 8
  %11 = call %struct.hns_roce_qp* @to_hr_qp(%struct.ib_qp* %10)
  store %struct.hns_roce_qp* %11, %struct.hns_roce_qp** %9, align 8
  %12 = load %struct.hns_roce_qp*, %struct.hns_roce_qp** %9, align 8
  %13 = getelementptr inbounds %struct.hns_roce_qp, %struct.hns_roce_qp* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp sle i32 %14, 1
  br i1 %15, label %16, label %22

16:                                               ; preds = %4
  %17 = load %struct.ib_qp*, %struct.ib_qp** %5, align 8
  %18 = load %struct.ib_qp_attr*, %struct.ib_qp_attr** %6, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load %struct.ib_qp_init_attr*, %struct.ib_qp_init_attr** %8, align 8
  %21 = call i32 @hns_roce_v1_q_sqp(%struct.ib_qp* %17, %struct.ib_qp_attr* %18, i32 %19, %struct.ib_qp_init_attr* %20)
  br label %28

22:                                               ; preds = %4
  %23 = load %struct.ib_qp*, %struct.ib_qp** %5, align 8
  %24 = load %struct.ib_qp_attr*, %struct.ib_qp_attr** %6, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load %struct.ib_qp_init_attr*, %struct.ib_qp_init_attr** %8, align 8
  %27 = call i32 @hns_roce_v1_q_qp(%struct.ib_qp* %23, %struct.ib_qp_attr* %24, i32 %25, %struct.ib_qp_init_attr* %26)
  br label %28

28:                                               ; preds = %22, %16
  %29 = phi i32 [ %21, %16 ], [ %27, %22 ]
  ret i32 %29
}

declare dso_local %struct.hns_roce_qp* @to_hr_qp(%struct.ib_qp*) #1

declare dso_local i32 @hns_roce_v1_q_sqp(%struct.ib_qp*, %struct.ib_qp_attr*, i32, %struct.ib_qp_init_attr*) #1

declare dso_local i32 @hns_roce_v1_q_qp(%struct.ib_qp*, %struct.ib_qp_attr*, i32, %struct.ib_qp_init_attr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
